# cfn-cross-account-dns-provider

./: .buildspec.yaml  .copier-answers.yml  .dockerignore  .gitignore  .release  Dockerfile  Dockerfile.lambda  Makefile  Makefile.mk  Pipfile  README.md  pyproject.toml  setup.cfg  tox.ini
cloudformation/: cfn-cross-account-dns-provider.yaml  cicd-pipeline.yaml  demo.yaml
doc/: CrossAccountDNS.md
src/cfn_cross_account_dns_provider/: __init__.py  cross_account_dns.py
tests/: shared_resources.py  test_a_record.py  test_client_errors.py  test_cloudfront_alias.py  test_cname_record.py  test_handler.py  test_schema.py
