[metadata]
name = cfn-cross-account-dns-provider
version = 0.1.0
author = Joris Conijn
url = https://github.com/binxio/cfn-cross-account-dns-provider
author_email = joris.conijn@xebia.com
description = Manage DNS records in a Route53 Hosted Zone in another AWS Account, using a SNS backed custom CloudFormation resource.
long_description = file: README.md
long_description_content_type = text/markdown

license = BSD 3-Clause License
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Operating System :: POSIX
  Operating System :: MacOS
  Operating System :: Unix
  Programming Language :: Python :: 3

[options]
package_dir=
  =src
packages=find:

zip_safe = True
include_package_data = True
install_requires =
  boto3
  requests
  cfn_resource_provider>=1.2.0

use_scm_version = True


[options.packages.find]
where=
  src
